--- a/NWAuthVIP/Podfile
+++ b/NWAuthVIP/Podfile
@@ -4,12 +4,8 @@
 target 'NWAuthVIP' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
-
+ pod 'Alamofire', '~> 5.0.0-beta.5'
   # Pods for NWAuthVIP
 
-  target 'NWAuthVIPTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
 
 end
